[gd_scene load_steps=3 format=3 uid="uid://bepltiqu3n7q7"]

[ext_resource type="Script" uid="uid://dejhgrvh5egrq" path="res://maptree/ui/relic_map_description.gd" id="1_r4ay0"]
[ext_resource type="Texture2D" uid="uid://b4r8qkebj3r8y" path="res://maptree/TestButtons/Small_Health_Potion.png" id="1_wgifo"]

[node name="RelicMapDescription" type="ColorRect"]
offset_left = 250.0
offset_top = 120.0
offset_right = 902.0
offset_bottom = 568.0
color = Color(0.33660764, 0.3366076, 0.3366076, 0.7764706)
script = ExtResource("1_r4ay0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(652, 448)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 25

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(612, 348)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 75

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.22745098, 0.22745098, 0.22745098, 0.7019608)

[node name="Icon" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 250.0
offset_bottom = 250.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_wgifo")
expand_mode = 5

[node name="Amount" type="Label" parent="VBoxContainer/HBoxContainer2/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -54.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "22"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.22745098, 0.22745098, 0.22745098, 0.7019608)

[node name="Description" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2/ColorRect2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 250)
layout_mode = 0
offset_right = 250.0
offset_bottom = 250.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 20
text = "Dieser Trank f√ºllt 3 Leben wieder auf."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="UseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Use"

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "EXIT"
